[package]
name = "craft-show-entry-cards"
authors = ["Mike Croall"]
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
derive_typst_intoval = "0.5.0"
leptos = { version = "0.8.10", features = ["csr"] }
leptos-use = "0.16.3"
typst = "0.13.1"
typst-as-lib = "0.14.4"
typst-pdf = "0.13.1"
